--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,4 +1,4 @@
-TODO_plugin_name:
-  plugin_name_enabled:
+discourse_exempt_from_watched_words:
+  discourse_exempt_from_watched_words_enabled:
     default: false
     client: true
